--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,22 +1,49 @@
-<h1>Web Development Course</h1>
-<hr/>
-<p>In this course we will learn how to become frontend developer  </p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Exercise Plan</title>
+</head>
+<body>
+    <header>
+            <h1>Wellness Plan</h1>
+            <h2>This is our home page</h2>
+            <p>Welcome to Wellness Plan a place made for you to feel stronger, healthier, and more balanced every day. Our easy-to-follow workouts cover everything from abs and arms to chest,legs, back, and shoulders, so you can build strength and stay active at your own pace. But we believe health is not just about muscles it is also about peace of mind. That’s why we focus on mental well-being too, helping you find confidence, energy, and calmness along the way. Whether you are just starting out or already on your fitness journey, we’re here to guide and cheer you on toward a healthier, happier you</p>
+   
+    </header>
 
-<ol>
-    <li> milk </li>
-    <li>sugar</li>
-    <li>water</li>
-</ol>
 
-<ul>
-    <li> milk </li>
-    <li>sugar</li>
-    <li>water</li>
-</ul>
+    <main>
+         <ul>
+        <li><a href="index.html" target="_blank">homepage</a></li>
+        <li><a href="abs.html" target="_blank">Abs exercise</a></li>
+        <li><a href="arm.html" target="_blank">Arm exercise</a></li>
+        <li><a href="chest.html" target="_blank">Chest exercise</a></li>
+        <li><a href="leg.html" target="_blank">Leg exercise</a></li>
+        <li><a href="back.html" target="_blank">Back&shoulder exercise</a></li>
+        <li><a href="contact.html" target="_blank">Contact us</a></li>
 
-<!-- anchor tag -->
+    </ul>
 
-<a href="https://www.geeksforgeeks.org/machine-learning/inductive-learning-algorithm/" target ="_blank"> vist it</a>
 
-<!-- image tag -->
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS2DydJ-LFlByDRWENrr5_bnP1OiJZte2zN58FlUyHBBNgl81ScO_6Mq8wzPFRUH4tXRHPRrQ" height ="200px" alt="machine learning">
+    <h2>Your Fat-Burning Routine: What to Do Before and After Exercise</h2>
+    <p>
+        Before your workout, it’s important to prepare your body. A light warm-up and stretching get your muscles ready, boost blood flow, and prevent injuries. Eating something small and balanced, like fruit or a handful of nuts, can give you the right energy to perform better.    </p>
+   
+    <p>After your workout, your body needs recovery. Cooling down with stretches helps relax your muscles and reduce soreness. Drinking water keeps you hydrated, and a protein-rich snack or meal supports muscle repair and keeps your metabolism active, which is key for fat loss.</p>
+    
+    <p>Consistency in both pre- and post-workout habits will not only help you burn fat but also keep you healthier, stronger, and more energized every day</p>
+
+    </main>
+      <hr>
+    <footer>
+       <div>
+            <p>copyright &copy; All rights are reserved.</p>
+            <p>Contact Us</p>
+
+       </div>
+    </footer>
+   
+</body>
+</html>
